@@ -35,3 +35,4 @@ Re-wrote Gentoo networking support code to work with 2006 and later versions.
 Added support for VLANs and channel bonding on Debian, thanks to Tim Oberfoell.
 Boot-time network interfaces can have comments on Redhat-based systems.
 The list of interfaces is now separated into active and boot time using tabs.
+The Apply Configuration button on FreeBSD now properly deletes virtual interfaces that should no longer exist.
